--- a/src/style.css
+++ b/src/style.css
@@ -64,19 +64,28 @@ body {
     border-bottom: 10px;
 }
 
-span{ 
-    font-family: 'Courier New', Courier, monospace;
-
+h3{ 
+    text-align: center;
+    font-family: 'open sans', sans-serif;
+    font-weight: bold;
+    font-size: 25px;
+    color: rgb(37, 69, 11);
+    margin: 5px;
 }
 .comousar {
-    background: #d13a1c56;
+    background: #f1634756;
     border-radius: 14px;
     font-size: 19px;
-    letter-spacing: 0.3px;
+    letter-spacing: 0.7px;
     margin-top: 30px;
-    padding: 13px;
+    padding: 20px;
     text-align: justify;
     width: 75%;
+}
+p {
+    color: rgb(4, 7, 41);
+    font-family: 'open sans', sans-serif;
+    font-size: 20px;
 }
 
 footer {
