--- a/src/style.css
+++ b/src/style.css
@@ -10,13 +10,13 @@ h1 {
 h2 {
     text-align: center;
     font-family: 'Courier New', Courier, monospace;
-    color: rgb(169, 45, 169);
-    font-size: x-large;
+    color: rgb(47, 91, 12);
+    font-size: 20px;
     font-weight: bold;
 }
 
 body {
-    background-image: url(imagem/bg.png);
+    background-image: url(imagem/backgroungscooby.png);
     background-attachment: fixed;
     background-size: cover;
     position: inherit;
@@ -64,16 +64,17 @@ body {
     border-bottom: 10px;
 }
 
-h3{ 
+h3 {
     text-align: center;
-    font-family: 'open sans', sans-serif;
+    font-family: 'Courier New', Courier, monospace;
     font-weight: bold;
     font-size: 25px;
     color: rgb(37, 69, 11);
     margin: 5px;
 }
+
 .comousar {
-    background: #f1634756;
+    background: #ee6a5056;
     border-radius: 14px;
     font-size: 19px;
     letter-spacing: 0.7px;
@@ -82,6 +83,12 @@ h3{
     text-align: justify;
     width: 75%;
 }
+
+mark {
+    background-color: orangered;
+    color: aliceblue;
+}
+
 p {
     color: rgb(4, 7, 41);
     font-family: 'open sans', sans-serif;
